v3.9.4 (XXXX-XX-XX)
-------------------

* Fix an issue with replication of arangosearch view change entries in single
  server replication and active failover. Previously, when changing the
  properties of existing views, the changes were not properly picked up by
  followers in these setups. Cluster setups were not affected.

* Improve upload and download speed of hotbackup by changing the way we use
  rclone. Empty hash files are now uploaded or downloaded by pattern, and all
  other files are done in batches without remote directory listing, which allows
  rclone to parallelize and avoid a lot of unnecessary network traffic. The
  format of hotbackups does not change at all.

* Updated arangosync to v2.12.0.

* Fixed BTS-905 regarding read-only mode for expired license.

* Fixed issue BTS-1018: Improve logging of binary velocypack request data.

* Defer intermediate commits in the middle of a multi-document (array)
  operation. This is to ensure that the RocksDB key locks for all participating
  document keys are still held while the operations are replicating via the
  synchronous replication.

* Fixed issue BTS-1023:
  Added Linux-specific startup option `--use-splice-syscall` to control whether
  the Linux-specific splice() syscall should be used for copying file contents.
  While the syscall is generally available since Linux 2.6.x, it is also
  required that the underlying filesystem supports the splice operation. This is
  not true for some encrypted filesystems, on which splice() calls thus fail.
  By setting the startup option `--use-splice-syscall` to `false`, a less
  efficient, but more portable user-space file copying method will be used
  instead, which should work on all filesystems.
  The startup option is not available on other operating systems than Linux.

* Fixed BTS-1017: Fixed a graph search issue, where subqueries lead to incorrect
  results when they have been pushed down fully onto a DBServer when they are in